--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -15,7 +15,7 @@
 		<li>Elemento 3 </li>
 		<li>Elemento 4 </li>
 	</ol>
-	<button id="add">Añadir</button>
+	<button id="add">Añadir Elemento</button>
 	<button id="rotar1">Rotar elementos hacia arriba</button>
 	<button id="rotar2">Rotar elementos hacia abajo</button>
 	<button id="delete"><i class="fas fa-trash-alt"></i></button>
