--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -37,6 +37,9 @@
 		$('#delete').click(function(){
 			$('ol li:last').remove();
 		});
+		$('ol').mouseover(function(){
+			$('ol').css({background : 'red'});
+		});
 	});
 </script>
 </body>
