--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -40,6 +40,9 @@
 		$('ol').mouseover(function(){
 			$('ol').css({background : 'red'});
 		});
+		$('ol').mouseleave(function(){
+			$('ol').css({background : 'white'});
+		});
 	});
 </script>
 </body>
