--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -19,7 +19,7 @@
 	<button id="rotar1">Rotar elementos hacia arriba</button>
 	<button id="rotar2">Rotar elementos hacia abajo</button>
 	<button id="delete"><i class="fas fa-trash-alt"></i></button>
-</center>
+</center><br>
 <div id="accion"></div>
 
 <script>
