--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -16,6 +16,7 @@
 		.over{
 			background : #e6e6e6;
 			font-weight: bold;
+			cursor: pointer;
 		}
 	</style>
 <script src="js/jquery-3.3.1.min.js"></script>
