--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -29,8 +29,9 @@
 	<button id="rotar2">Rotar elementos hacia abajo</button>
 	<button id="delete"><i class="fas fa-trash-alt"></i></button><br>
 </center>
-<div id="accion" style="padding-left: 20px">Selexiona argo</div>
+<div id="peyote" style="padding-left: 20px">Selexiona argo</div>
 <center>
+	<div id="cosa rara"></div>
 	<ol>
 		<li>Elemento 1 </li>
 		<li>Elemento 2 </li>
@@ -60,11 +61,11 @@
 		function selector(){
 			$('li').mouseover(function(){
 				$(this).addClass('over');
-				$('#accion').html($(this).text()+" seleccionado");
+				$('#peyote').html($(this).text()+" seleccionado");
 			});
 			$('li').mouseleave(function(){
 				$(this).removeClass('over');
-				$('#accion').html("Selexiona argo cohone");
+				$('#peyote').html("Selexiona argo cohone");
 			});
 		}
 	});
