--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -14,6 +14,9 @@
 			background: #bfbfbf;
 			border: 1px outset;
 		}
+		.close{
+			position: top;
+		}
 		.over{
 			background : #e6e6e6;
 			font-weight: bold;
@@ -31,7 +34,9 @@
 </center>
 <div id="selector" style="padding-left: 20px">Selexiona argo</div>
 <center>
-	<div id="accion"><img id="img" src=""></div>
+	<div id="accion">
+		<img id="img" src=""></i>
+	</div>
 	<ol>
 		<li>Elemento 1 </li>
 		<li>Elemento 2 </li>
@@ -45,7 +50,8 @@
 		selector();
 		$('#add').click(function(){
 			var size = $('li').length;
-			$('ol').append('<li>Elemento '+(size+1)+'</li>');
+			var li = $('<li>', {text: 'Elemento '+(size+1)})
+			$('ol').append(li);
 			selector();
 		});
 		$('#rotar1').click(function(){
@@ -68,7 +74,15 @@
 				$('#selector').html("Selexiona argo cohone");
 			});
 			$('li').click(function(){
+				var i = $('<i>', {class: 'fas fa-times close'});
 				$("#img").attr("src", "img/coca.png");
+
+				var boton = $('<button>', {id: 'close'}).append(i);
+				$("#accion").append(boton);
+				$("#close").click(function(){
+					$("#img").attr("src", "");
+					$("#close").remove();
+				});
 			});
 		}
 	});
