--- a/elementosHTML.html
+++ b/elementosHTML.html
@@ -82,7 +82,7 @@
 				$("#close").attr("hidden", false);
 				$("#close").click(function(){
 					$("#img").attr("src", "");
-					$("#close").remove();
+					$("#close").attr("hidden", true);
 				});
 			});
 		}
